force-app/main/default/objects/Loan_Details__c/Loan_Details__c.object-meta.xml
<CustomObject>
    <label>Loan Details</label>
    <nameField>
        <label>Accounts Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>