force-app/main/default/objects/Loan_Details__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>