force-app/main/default/objects/Loan_Details__c/fields/Average_Account_Age_Month__c.field-meta.xml
<CustomField>
    <fullName>Average_Account_Age_Month__c</fullName>
    <label>Average Account Age Month</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>