force-app/main/default/objects/Loan_Details__c/fields/Bureau_Highmark__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Highmark__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bureau Highmark</label>
    <referenceTo>Bureau_Highmark__c</referenceTo>
    <relationshipName>AccountsSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>