force-app/main/default/objects/Loan_Details__c/fields/Credit_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Credit_Guarantor__c</fullName>
    <label>Credit Guarantor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>