force-app/main/default/objects/Loan_Details__c/fields/Customer_Disbursal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Disbursal_Amount__c</fullName>
    <label>Customer Disbursal Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>