force-app/main/default/objects/Loan_Details__c/fields/EMI_Frequency__c.field-meta.xml
<CustomField>
    <fullName>EMI_Frequency__c</fullName>
    <label>EMI Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>