force-app/main/default/objects/Loan_Details__c/fields/Highmark_Score__c.field-meta.xml
<CustomField>
    <fullName>Highmark_Score__c</fullName>
    <label>Highmark Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>