force-app/main/default/objects/Loan_Details__c/fields/Length_Of_Credit_History_Year__c.field-meta.xml
<CustomField>
    <fullName>Length_Of_Credit_History_Year__c</fullName>
    <label>Length Of Credit History Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>