force-app/main/default/objects/Loan_Details__c/fields/Loan_Amt__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Loan Amount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>