force-app/main/default/objects/Loan_Details__c/fields/Loan_Categorisation__c.field-meta.xml
<CustomField>
    <fullName>Loan_Categorisation__c</fullName>
    <label>Loan Categorisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>