force-app/main/default/objects/Loan_Details__c/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <label>Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase of New Fixed Assets</fullName>
            </value>
            <value>
                <fullName>Purchase of Raw Material</fullName>
            </value>
            <value>
                <fullName>Starting of New Business</fullName>
            </value>
            <value>
                <fullName>Personal Use</fullName>
            </value>
            <value>
                <fullName>Marriage Expenses</fullName>
            </value>
            <value>
                <fullName>Medical Expenses</fullName>
            </value>
            <value>
                <fullName>Outside Credit</fullName>
            </value>
            <value>
                <fullName>Balance Transfer</fullName>
            </value>
            <value>
                <fullName>Purchase of Residential Property</fullName>
            </value>
            <value>
                <fullName>Home Renovation / Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>