force-app/main/default/objects/Loan_Details__c/fields/Obligations__c.field-meta.xml
<CustomField>
    <fullName>Obligations__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Obligations</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>