force-app/main/default/objects/Loan_Details__c/fields/Overall_Remarks_pc__c.field-meta.xml
<CustomField>
    <fullName>Overall_Remarks_pc__c</fullName>
    <description>This field is used for PC Stage only to capture the overall Remarks for Each Applicant</description>
    <label>Overall Remarks</label>
    <type>TextArea</type>
</CustomField>