force-app/main/default/objects/Loan_Details__c/fields/Overdue_Amt__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Amt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Overdue Amt</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>