force-app/main/default/objects/Loan_Details__c/fields/Primary_Sanctioned_Amount__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sanctioned_Amount__c</fullName>
    <label>Primary Sanctioned Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>