force-app/main/default/objects/Loan_Details__c/fields/Secondary_Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Current_Balance__c</fullName>
    <label>Secondary Current Balance</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>