force-app/main/default/objects/Loan_Details__c/fields/Secondary_Disbursed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Disbursed_Amount__c</fullName>
    <label>Secondary Disbursed Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>