force-app/main/default/objects/Loan_Details__c/fields/Secondary_Overdue_Number_Of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Overdue_Number_Of_Accounts__c</fullName>
    <label>Secondary Overdue Number Of Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>