force-app/main/default/objects/Loan_Details__c/fields/Take_Over_Amount__c.field-meta.xml
<CustomField>
    <fullName>Take_Over_Amount__c</fullName>
    <label>Take Over Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>