force-app/main/default/objects/Loan_Details__c/fields/Tenure_Requested__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Requested__c</fullName>
    <label>Tenure Requested</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>