force-app/main/default/objects/Loan_Details__c/fields/Type_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Loan__c</fullName>
    <label>Type of Loan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>