force-app/main/default/objects/Loan_Details__c/recordTypes/Loan_Details.recordType-meta.xml
<RecordType>
    <fullName>Loan_Details</fullName>
    <active>true</active>
    <label>Loan Details</label>
</RecordType>