force-app/main/default/objects/Loan_Details__c/recordTypes/Primary_Accounts_Summary.recordType-meta.xml
<RecordType>
    <fullName>Primary_Accounts_Summary</fullName>
    <active>true</active>
    <label>Primary Accounts Summary</label>
</RecordType>