force-app/main/default/objects/Loan_Details__c/recordTypes/Secondary_Accounts_Summary.recordType-meta.xml
<RecordType>
    <fullName>Secondary_Accounts_Summary</fullName>
    <active>true</active>
    <label>Secondary Accounts Summary</label>
</RecordType>